Project info file has been created

--- a/voting-app-pod.yaml
+++ b/voting-app-pod.yaml
@@ -4,3 +4,7 @@ metadata:
   name: voting-app-pod
   labels:
     name: demo-voting-app
+spec:
+  containers:
+    - name: voting-app-container
+      image: kodekloud/examplevoting
