Project info file has been created

--- a/voting-app-pod.yaml
+++ b/voting-app-pod.yaml
@@ -7,4 +7,6 @@ metadata:
 spec:
   containers:
     - name: voting-app-container
-      image: kodekloud/examplevoting
+      image: kodekloud/examplevoting_vote:v1
+      ports:
+        - containerPort: 80
