--- a/result-app-pod.yaml
+++ b/result-app-pod.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: voting-app-pod
+  name: result-app-pod
   labels:
-    name: voting-app-pod
+    name: result-app-pod
     app: demo-voting-app
 spec:
   containers:
-    - name: voting-app-container
-      image: kodekloud/examplevoting_vote:v1
+    - name: result-app-container
+      image: kodekloud/examplevoting_result:v1
       ports:
         - containerPort: 80
