--- a/redis_service.yaml
+++ b/redis_service.yaml
@@ -1,3 +1,6 @@
 apiVersion: kodekloud/examplevoting_vote:v1
 "kind: Service"
 kind: Service
+metadata:
+  name: vote-service
+  namespace: examplevoting
