redis service yaml file updated

--- a/redis_service.yaml
+++ b/redis_service.yaml
@@ -8,3 +8,8 @@ spec:
   selector:
     app: vote
   ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+  type: ClusterIP
+  sessionAffinity: None
