--- a/redis_service.yaml
+++ b/redis_service.yaml
@@ -24,3 +24,7 @@ spec:
   ipFamilyPolicy: SingleStack
   topologyKeys:          # This field is deprecated and should not be used.
     - kubernetes.io/hostname
+  publishNotReadyAddresses: false
+  sessionAffinityConfig: # This field is deprecated and should not be used.
+    clientIP:
+      timeoutSeconds: 10800
