redis service yaml file updated

--- a/redis_service.yaml
+++ b/redis_service.yaml
@@ -28,3 +28,4 @@ spec:
   sessionAffinityConfig: # This field is deprecated and should not be used.
     clientIP:
       timeoutSeconds: 10800
+  loadBalancerClass:    # This field is deprecated and should not be used.
